its responsive now and fixing contrast issues with dynamic color

--- a/css/_core.scss
+++ b/css/_core.scss
@@ -3,27 +3,48 @@
   padding:0;
   box-sizing:border-box;
 }
+
 body{
   background-color:white;
+  font-family: 'Inconsolata', sans-serif;
 }
 
 h1{
   text-align:center;
   font-size: 5em;
   color:rgba(0,0,0,.25);
+  text-shadow: 0px 0px 0px rgba(255, 255, 255, 0.2);
+  font-family: 'Inconsolata', sans-serif;
 }
+
 h3{
   text-align:center;
   font-size:3em;
   color:rgba(0,0,0,.25);
+  padding: 5% 0;
 }
-.view-link {
-    text-align: center;
+
+.to-link {
+  text-align: right;
+  a{
+    font-size:1.5em;
+  }
 }
-.view-link a{
-  border-radius:3px;
-  font-size:1.5em;
-  color:gray;
-  background:white;
-  padding:10px 20px;
+
+.nav {
+  margin-top: 30px;
+  line-height: 60px;
+}
+
+.nav a {
+  border: 1px solid;
+  padding: 20px 30px;
+  font-size: 2em;
+  background: white;
+  color: black;
+  transition: .2s all;
+  &:hover {
+    color: white;
+    background: black;
+  }
 }
