--- a/css/main.css
+++ b/css/main.css
@@ -4,30 +4,69 @@
   box-sizing: border-box; }
 
 body {
-  background-color: white; }
+  background-color: white;
+  font-family: 'Inconsolata', sans-serif; }
 
 h1 {
   text-align: center;
   font-size: 5em;
-  color: rgba(0, 0, 0, 0.25); }
+  color: rgba(0, 0, 0, 0.25);
+  text-shadow: 0px 0px 0px rgba(255, 255, 255, 0.2);
+  font-family: 'Inconsolata', sans-serif; }
 
 h3 {
   text-align: center;
   font-size: 3em;
-  color: rgba(0, 0, 0, 0.25); }
+  color: rgba(0, 0, 0, 0.25);
+  padding: 5% 0; }
 
-.view-link {
-  text-align: center; }
+.to-link {
+  text-align: right; }
+  .to-link a {
+    font-size: 1.5em; }
 
-.view-link a {
-  border-radius: 3px;
-  font-size: 1.5em;
-  color: gray;
+.nav {
+  margin-top: 30px;
+  line-height: 60px; }
+
+.nav a {
+  border: 1px solid;
+  padding: 20px 30px;
+  font-size: 2em;
   background: white;
-  padding: 10px 20px; }
+  color: black;
+  transition: .2s all; }
+  .nav a:hover {
+    color: white;
+    background: black; }
 
-.home-view div {
-  margin: 10% 0; }
+@media screen and (max-width: 40em) {
+  .new-scheme {
+    margin-bottom: 5%; }
+  .to-link {
+    text-align: center;
+    margin-bottom: 5%; }
+    .to-link a {
+      font-size: 1.5em; }
+  .nav {
+    margin-top: 30px;
+    line-height: 60px;
+    text-align: center; }
+  .nav a {
+    padding: 5px 10px; } }
+
+@media only screen and (min-width: 40.063em) {
+  .to-link {
+    text-align: center;
+    margin-bottom: 5%; }
+    .to-link a {
+      font-size: 1.5em; }
+  .nav {
+    margin-top: 30px;
+    line-height: 60px;
+    text-align: center; }
+  .nav a {
+    padding: 5px 10px; } }
 
 .switch {
   padding: 0;
